--- a/src/app/web-app/header/header.component.html
+++ b/src/app/web-app/header/header.component.html
@@ -70,7 +70,10 @@
             </h6>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" [routerLink]="'/web-app/personal-settings'"><i class="fas fa-user mr-2"></i>My Profile</a>
-            <a class="dropdown-item" target="_blank" [routerLink]="'/dashboard'"><i class="fas fa-user-shield mr-2"></i>Admin</a>
+            <a class="dropdown-item" *ngIf="userInfo && (userInfo.rid==1 || userInfo.rid==2)" target="_blank" [routerLink]="'/dashboard'">
+              <i class="fas fa-user-shield mr-2"></i>
+              Admin
+            </a>
             <a class="dropdown-item curs-ptr" (click)="openModal()"><i class="fas fa-lock mr-2"></i>Change Password</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="javascript:void(0)" (click)="logout();"><i class="fas fa-sign-out-alt mr-2"></i>Logout</a>
