--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-header *ngIf="isToken && !isAuthPage() && isVisb && !isWebApp()" [userInfo]="usrInfo"></app-header>
+<app-header *ngIf="isToken && !isAuthPage() && isVisb && !isWebApp() && usrInfo && (usrInfo.rid==1 || usrInfo.rid==2)" [userInfo]="usrInfo"></app-header>
 <div class="content" *ngIf="isVisb">
-  <app-sidebar *ngIf="isToken && !isAuthPage() && !isWebApp()"></app-sidebar>
+  <app-sidebar *ngIf="isToken && !isAuthPage() && !isWebApp() && usrInfo && (usrInfo.rid==1 || usrInfo.rid==2)"></app-sidebar>
   <router-outlet></router-outlet>
 </div>
 <app-loader [type]="'page'" *ngIf="!isVisb"></app-loader>
