--- a/src/app/web-app/view/view.component.html
+++ b/src/app/web-app/view/view.component.html
@@ -1,7 +1,7 @@
 <app-loader [type]="'page'" *ngIf="loading"></app-loader>
 <div *ngIf="!loading">
   <div *ngIf="cntnt else noCntnt">
-    <div class="heading bg-white w-100 row mx-0">
+    <div class="heading bg-white w-100 row mx-0" *ngIf="!isSelPage">
       <div class="col-4 align-self-center">{{cntnt.name}}</div>
       <div class="col-4 align-self-center d-flex justify-content-center">
         <div class="btn" placement="bottom" *ngIf="cntnt.contentType==1" ngbTooltip="{{leftSide?'Hide Pages':'Show Pages'}}" (click)="leftSide = !leftSide">
@@ -16,6 +16,15 @@
             <button class="dropdown-item curs-ptr"><i class="fas fa-thumbs-up"></i>Like</button>
           </div>
         </div>
+        <div class="dropdown" *ngIf="cntnt.contentType==1">
+          <button class="btn" type="button" id="addCol" data-toggle="dropdown">
+            <i class="fas fa-plus-circle"></i>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="addCol">
+            <button class="dropdown-item curs-ptr" (click)="openModal(addColl,'full')">Entire Document Document</button>
+            <button class="dropdown-item curs-ptr" (click)="leftSide=true;isSelPage=true">Select Pages</button>
+          </div>
+        </div>
       </div>
       <div class="col-4 text-right align-self-center">
         <div class="btn" *ngIf="!isFullScreen" (click)="openFullscreen()" ngbTooltip="View in Full Screen"><i class="fas fa-expand-alt"></i></div>
@@ -26,11 +35,20 @@
         <i class="fas fa-angle-double-{{rightSide?'right':'left'}}"></i>
       </div>
     </div>
+    <div class="heading bg-white w-100 row mx-0" *ngIf="isSelPage">
+      <div class="col-4 align-self-center">
+        <button class="btn btn-primary text-white btn-sm" (click)="closeLeftSel()">Cancel</button>
+      </div>
+      <div class="col-4 align-self-center d-flex justify-content-center">{{cntnt.name}}</div>
+      <div class="col-4 align-self-center text-right">
+        <button class="btn btn-primary text-white btn-sm" (click)="openModal(addColl,'pages')" [disabled]="!selPages || (selPages && selPages.length<=0)">Add</button>
+      </div>
+    </div>
     <div class="pdf-view d-flex mx-0">
       <div class="left-body bg-white text-center" *ngIf="cntnt.contentType==1 && leftSide">
         <div class="bg-hi-grey rounded px-3 py-1 my-3 w-fit mx-auto">{{cntnt.name}}</div>
-        <div class="d-flex my-3 pl-3" *ngFor="let cPImg of cntnt.pdfImages"> <!-- class active -->
-          <mat-checkbox class="align-self-center mb-4"></mat-checkbox>
+        <div class="d-flex my-3 pl-3" *ngFor="let cPImg of cntnt.pdfImages" [ngClass]="{'active': actPage ==cPImg.pageNo}">
+          <mat-checkbox *ngIf="isSelPage" class="align-self-center mb-4" (change)="addRemPages($event,cPImg)"></mat-checkbox>
           <div class="curs-ptr" (click)="goToPage(cPImg)">
             <div class="thumbnail">
               <img [src]="cPImg.imagePath?cPImg.imagePath:defIcon" class="w-50" alt="Thumbnail" />
@@ -129,7 +147,7 @@
               </div>
             </div>
           </mat-tab>
-          <mat-tab label="Comments (0)">
+          <mat-tab label="Comments ({{cntnt.comments && cntnt.comments.length?cntnt.comments.length:0}})">
             <div class="px-3">
               <div class="comment d-flex mt-2" *ngFor="let cmnt of cntnt.comments">
                 <div class="align-self-center mr-2">
@@ -141,7 +159,7 @@
                     <span class="date ml-3 text-hi-grey">{{(cmnt.createdDate|date:'dd MMM, yyyy')||'N/A'}}</span>
                     <div class="btn btn-light float-right"><i class="fas fa-trash-alt"></i></div>
                   </div>
-                  <div class="comment-text text-hi-dark-grey">{{cmnt.commentText||'N/A'}}m</div>
+                  <div class="comment-text text-hi-dark-grey">{{cmnt.commentText||'N/A'}}</div>
                 </div>
               </div>
               <!-- add comment -->
@@ -155,8 +173,8 @@
                 </mat-form-field>
               </div>
               <div class="form-group text-right">
-                <button (click)="addCmnt('cmnt')" [disabled]="true" class="btn btn-primary text-white btn-sm">
-                  <!-- <app-loader [type]="'btn'" *ngIf="disb.cmnt"></app-loader> -->
+                <button (click)="addCmnt('cmnt')" [disabled]="cmntDisb || !cmnt" class="btn btn-primary text-white btn-sm">
+                  <app-loader [type]="'btn'" *ngIf="cmntDisb"></app-loader>
                   Submit
                 </button>
               </div>
@@ -170,3 +188,29 @@
     No Content found
   </ng-template>
 </div>
+
+<!-- add resource modal -->
+<ng-template #addColl let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">Add to Collection</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body min-height-val" ngbAutofocus>
+    <app-loader [type]="'div'" *ngIf="collLoad"></app-loader>
+    <div *ngIf="!collLoad">
+      <div id="coll-div" class="d-flex border-bottom p-2 dark-bg-hover" *ngFor="let coll of colls">
+        <div class="icon align-self-center mr-2">
+          <img src="assets/images/discription.png" style="max-height:50px; width: 40px;">
+        </div>
+        <div class="name align-self-center">
+          {{coll.name}}
+        </div>
+        <div class="hover-coll ml-auto mr-3">
+          <button class="btn btn-primary btn-sm" (click)="addCntntToColl(coll)">Add</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
