--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,7 +26,7 @@ body {
 }
 
 .w-fit {
-  width: fit-content;
+  max-width: fit-content;
 }
 
 .text-hi-dark {
@@ -171,8 +171,14 @@ button[aria-label="Close"]:focus {
 // material
 .pdf-view {
   .right-body {
-    mat-tab-header {
+
+    mat-tab-header,
+    .mat-tab-body-wrapper {
       z-index: 0;
+    }
+
+    .mat-tab-body-content {
+      overflow: hidden;
     }
   }
 }
