removed concatenation of imagePath

--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
@@ -265,8 +265,7 @@
           <div class="d-flex border-bottom p-2 dark-bg-hover" *ngFor="let fldr of fldrArr"
             (click)="showAll === false ? showWorkspcFldrs(undefined, fldr) : showMyFiles(fldr);">
             <div class="icon align-self-center mr-2">
-              <img
-                src="{{fldr.folderIconPath ? 'http://hiforceapi.imobisoft.eu/' + fldr.folderIconPath : 'assets/images/folderIcon.png'}}"
+              <img src="{{fldr.folderIconPath ? fldr.folderIconPath : 'assets/images/folderIcon.png'}}"
                 style="max-height:50px; width: 40px;">
             </div>
             <div class="name align-self-center">
@@ -282,7 +281,7 @@
             </mat-checkbox>
             <div class="icon align-self-center mr-2">
               <img
-                src="{{content.pdfImages && content.pdfImages.length > 0 ? 'http://hiforceapi.imobisoft.eu/' + content.pdfImages[0].imagePath : 'http://hiforceapi.imobisoft.eu/' + content.urlIconPath}}"
+                src="{{content.pdfImages && content.pdfImages.length > 0 ? content.pdfImages[0].imagePath : content.urlIconPath}}"
                 style="max-height:50px; width: 40px;">
             </div>
             <div class="name align-self-center">
