--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -671,8 +671,7 @@
                 <!-- folders and smart folders -->
                 <div class="col-3 curs-ptr my-2" *ngFor="let folder of folderArr">
                   <div class="image">
-                    <img
-                      src="{{folder.folderIconPath ? 'http://hiforceapi.imobisoft.eu/' + folder.folderIconPath : 'assets/images/folderIcon.png'}}"
+                    <img src="{{folder.folderIconPath ? folder.folderIconPath : 'assets/images/folderIcon.png'}}"
                       (click)="changeFolder(folder)">
                     <div class="dropdown" style="z-index:1;">
                       <button class="btn btn-light btn-sm dropdown-toggle" type="button" id="comInfoDD"
@@ -788,7 +787,8 @@
             File Type
           </button>
           <div class="dropdown-menu" style="width:12rem;" aria-labelledby="fileDD" (click)="$event.stopPropagation();">
-            <mat-checkbox class="dropdown-item" *ngFor="let ft of fileTypesArr" (change)="addFileType($event.checked, ft,true)">
+            <mat-checkbox class="dropdown-item" *ngFor="let ft of fileTypesArr"
+              (change)="addFileType($event.checked, ft,true)">
               {{ft.n}}
             </mat-checkbox>
           </div>
@@ -1183,7 +1183,7 @@
           </div>
         </div> -->
         <div class="image border mt-2 mb-4">
-          <img [src]="iconUrl && addURLIcon == 'cust-icon' ? 'http://hiforceapi.imobisoft.eu/' + iconUrl : defIcon">
+          <img [src]="iconUrl && addURLIcon == 'cust-icon' ? iconUrl : defIcon">
           <div class="del-btn btn btn-light" *ngIf="iconUrl && addURLIcon=='cust-icon'" (click)="remImg(ip)"><i
               class="fas fa-trash-alt"></i>
           </div>
@@ -1312,7 +1312,7 @@
         </div>
       </div> -->
       <div class="image border mt-2 mb-4">
-        <img [src]="iconUrl && addURLIcon == 'cust-icon' ? 'http://hiforceapi.imobisoft.eu/' + iconUrl : defIcon">
+        <img [src]="iconUrl && addURLIcon == 'cust-icon' ? iconUrl : defIcon">
         <div class="del-btn btn btn-light" *ngIf="iconUrl && addURLIcon=='cust-icon'" (click)="remImg(inp)"><i
             class="fas fa-trash-alt"></i>
         </div>
