Dev Prod build,merge,getobjbyemp api in exp inner, add cancel button in all form modal,change trash to delete in cntnt,add min and max limit in email and password fields,change tab name, clear single filter

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -9,7 +9,7 @@
         novalidate>
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Email</mat-label>
-          <input matInput formControlName="email" required>
+          <input matInput formControlName="email" maxlength="50" required>
           <i matSuffix class="fas fa-envelope"></i>
           <mat-error *ngIf="forgPassForm.get('email')!.hasError('required')">
             Email is required
