--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -8,15 +8,18 @@
       <form class="w-75 mx-auto p-4" name="resetPassForm" (ngSubmit)="resetPassword()" [formGroup]="resetPassForm" novalidate>
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Password</mat-label>
-          <input matInput [type]="hidePass?'password':'text'" formControlName="pswd" required>
+          <input matInput [type]="hidePass?'password':'text'" formControlName="pswd" maxlength="15" required>
           <i matSuffix (click)="hidePass = !hidePass" [ngClass]="{'fa-eye': hidePass, 'fa-eye-slash': !hidePass}" class="fas"></i>
-          <mat-error>
+          <mat-error *ngIf="resetPassForm.get('pswd')!.hasError('required')">
             Password is required
+          </mat-error>
+          <mat-error *ngIf="!resetPassForm.get('pswd')!.hasError('required') && resetPassForm.get('pswd')!.hasError('minlength')">
+            Password must be at least 6 characters long
           </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Confirm Password</mat-label>
-          <input matInput [type]="hideCPass?'password':'text'" formControlName="confirmPswd" required>
+          <input matInput [type]="hideCPass?'password':'text'" formControlName="confirmPswd" maxlength="15" required>
           <i matSuffix (click)="hideCPass = !hideCPass" [ngClass]="{'fa-eye': hideCPass, 'fa-eye-slash': !hideCPass}" class="fas"></i>
           <mat-error *ngIf="resetPassForm.get('confirmPswd')!.hasError('required')">
             Confirm Password is required
