--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -8,22 +8,24 @@
       <form class="w-75 mx-auto p-4" name="loginForm" (ngSubmit)="login()" [formGroup]="loginForm" novalidate>
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Email</mat-label>
-          <input matInput formControlName="email" required>
+          <input matInput formControlName="email" maxlength="50" required>
           <i matSuffix class="fas fa-envelope"></i>
           <mat-error *ngIf="loginForm.get('email')!.hasError('required')">
             Email is required
           </mat-error>
-          <mat-error
-            *ngIf="!loginForm.get('email')!.hasError('required') && loginForm.get('email')!.hasError('invalidEmail')">
+          <mat-error *ngIf="!loginForm.get('email')!.hasError('required') && loginForm.get('email')!.hasError('invalidEmail')">
             Please enter a valid email address
           </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Password</mat-label>
-          <input matInput [type]="hide?'password':'text'" formControlName="password" required>
+          <input matInput [type]="hide?'password':'text'" formControlName="password" maxlength="15" required>
           <i matSuffix (click)="hide = !hide" [ngClass]="{'fa-eye': hide, 'fa-eye-slash': !hide}" class="fas"></i>
-          <mat-error>
+          <mat-error *ngIf="loginForm.get('password')!.hasError('required')">
             Password is required
+          </mat-error>
+          <mat-error *ngIf="!loginForm.get('password')!.hasError('required') && loginForm.get('password')!.hasError('minlength')">
+            Password must be at least 6 characters long
           </mat-error>
         </mat-form-field>
         <div class="text-right">
