--- a/src/app/shared/components/chng-pass/chng-pass.component.html
+++ b/src/app/shared/components/chng-pass/chng-pass.component.html
@@ -8,23 +8,29 @@
  <div class="modal-body" ngbAutofocus>
    <mat-form-field appearance="outline" class="w-100">
      <mat-label>Current Password</mat-label>
-     <input matInput [type]="hideCurPass?'password':'text'" formControlName="currPswd" required>
+     <input matInput [type]="hideCurPass?'password':'text'" formControlName="currPswd" maxlength="15" required>
      <i matSuffix (click)="hideCurPass = !hideCurPass" [ngClass]="{'fa-eye': hideCurPass, 'fa-eye-slash': !hideCurPass}" class="fas"></i>
-     <mat-error>
+     <mat-error *ngIf="chngPassForm.get('currPswd')!.hasError('required')">
        Current Password is required
+     </mat-error>
+     <mat-error *ngIf="!chngPassForm.get('currPswd')!.hasError('required') && chngPassForm.get('currPswd')!.hasError('minlength')">
+       Current Password must be at least 6 characters long
      </mat-error>
    </mat-form-field>
    <mat-form-field appearance="outline" class="w-100">
      <mat-label>Password</mat-label>
-     <input matInput [type]="hidePass?'password':'text'" formControlName="pswd" required>
+     <input matInput [type]="hidePass?'password':'text'" formControlName="pswd" maxlength="15" required>
      <i matSuffix (click)="hidePass = !hidePass" [ngClass]="{'fa-eye': hidePass, 'fa-eye-slash': !hidePass}" class="fas"></i>
-     <mat-error>
+     <mat-error *ngIf="chngPassForm.get('pswd')!.hasError('required')">
        Password is required
+     </mat-error>
+     <mat-error *ngIf="!chngPassForm.get('pswd')!.hasError('required') && chngPassForm.get('pswd')!.hasError('minlength')">
+       Password must be at least 6 characters long
      </mat-error>
    </mat-form-field>
    <mat-form-field appearance="outline" class="w-100">
      <mat-label>Confirm Password</mat-label>
-     <input matInput [type]="hideCPass?'password':'text'" formControlName="confirmPswd" required>
+     <input matInput [type]="hideCPass?'password':'text'" formControlName="confirmPswd" maxlength="15" required>
      <i matSuffix (click)="hideCPass = !hideCPass" [ngClass]="{'fa-eye': hideCPass, 'fa-eye-slash': !hideCPass}" class="fas"></i>
      <mat-error *ngIf="chngPassForm.get('confirmPswd')!.hasError('required')">
        Confirm Password is required
