--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -335,6 +335,7 @@
     </div> -->
   </div>
 </ng-template>
+
 <!-- send invitation modal  -->
 <ng-template #sendInvitation let-modal>
   <div class="modal-header">
@@ -362,6 +363,7 @@
     </ul>
   </div>
   <div class="modal-footer">
+    <button class="btn btn-secondary btn-sm mr-2" (click)="modal.dismiss('Cross click')">Cancel</button>
     <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
   </div>
 </ng-template>
@@ -497,6 +499,7 @@
       </div>
     </div>
     <div class="modal-footer">
+      <button class="btn btn-secondary btn-sm mr-2" (click)="modal.dismiss('Cross click')">Cancel</button>
       <button class="btn btn-primary" [disabled]="usrForm!.invalid || usrLoading">
         <app-loader [type]="'btn'" *ngIf="usrLoading"></app-loader>
         {{isEdit?'Update':'Save'}}
