--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -1,5 +1,4 @@
-<app-loader [type]="'page'" *ngIf="catgLoading && tagLoading; else loadPage;"></app-loader> <!-- loader -->
-
+<app-loader [type]="'page'" *ngIf="catgLoading && tagLoading; else loadPage;"></app-loader>
 <ng-template #loadPage>
   <div class="tags-page row mx-0">
     <div class="sub-tab-nav row mx-0 mt-4 px-0" [ngClass]="{'col-md-12': !showRowInfo, 'col-md-8': showRowInfo}">
@@ -52,10 +51,9 @@
               </li>
             </ul>
             <ul class="list-unstyled cat-list pl-2 border-top">
-              <app-loader [type]="'div'" *ngIf="catgLoading; else loadCatgs;"></app-loader> <!-- loader -->
-
+              <app-loader [type]="'div'" *ngIf="catgLoading; else loadCatgs;"></app-loader>
               <ng-template #loadCatgs>
-                <ng-container *ngIf="catgs.length>0; else noCatg">
+                <ng-container *ngIf="catgs.length > 0; else noCatg">
                   <li class="dark-bg-hover px-2 py-1 rounded mt-2" *ngFor="let catg of catgs"
                     (click)="chngTags(catg.id)" [ngClass]="{'act-tag': selTag == catg.id}">
                     {{catg.name}}
@@ -69,11 +67,11 @@
                           <a class="dropdown-item" (click)="updCatgModal(editCategory, catg)">
                             <i class="fas fa-edit mr-1"></i>Edit
                           </a>
-                          <a class="dropdown-item" (click)="deactCatg(catg)" *ngIf="catg.isActive">
-                            <i class="fas fa-trash-alt mr-1"></i>Deactivate
-                          </a>
-                          <a class="dropdown-item" (click)="actCatg(catg)" *ngIf="!catg.isActive">
-                            <i class="fas fa-plus mr-1"></i>Activate
+                          <a class="dropdown-item text-{{catg.isActive ? 'primary' : 'success'}}"
+                            (click)="actDeactCatg(catg)">
+                            <i class="mr-1 fas"
+                              [ngClass]="{'fa-toggle-off': catg.isActive, 'fa-toggle-on': !catg.isActive}"></i>
+                            {{catg.isActive ? 'Deactivate' : 'Activate'}}
                           </a>
                         </div>
                       </div>
@@ -82,7 +80,6 @@
                 </ng-container>
                 <ng-template #noCatg>
                   <div class="text-secondary text-center mt-2">
-
                     No catgories found
                   </div>
                 </ng-template>
@@ -136,15 +133,17 @@
             <div class="card-text px-3">
               <table class="table table-hover text-dark w-100" [ngClass]="{'hide-rows': showRowInfo}">
                 <thead>
-                  <tr><!-- font-weight-normal': !col.isSelected -->
+                  <tr>
                     <th class="curs-ptr" *ngFor="let col of cols;let i =index" (click)="sortChange(col,i)">
-                      {{col.n}}<i class="fas ml-1"
+                      {{col.n}}
+                      <i class="fas ml-1"
                         [ngClass]="{'fa-sort-down align-top': !col.asc, 'fa-sort-up align-bottom': col.asc}"></i>
                     </th>
                   </tr>
                 </thead>
                 <tbody *ngIf="!tagLoading && tags.length > 0">
-                  <tr (click)="toggleInfo(tag)" *ngFor="let tag of tags" [ngClass]="{'sel-row':(rowInfo.id === tag.id)}">
+                  <tr class="curs-ptr" (click)="toggleInfo(tag)" *ngFor="let tag of tags"
+                    [ngClass]="{'sel-row':(rowInfo.id === tag.id)}">
                     <td>
                       {{tag.name}}
                     </td>
@@ -166,8 +165,7 @@
       </div>
     </div>
     <div class="workspace w-100 col-md-4 mt-4" *ngIf="showRowInfo">
-      <app-loader [type]="'page'" *ngIf="docLoading"></app-loader>
-      <div class="document" *ngIf="!docLoading">
+      <div class="document">
         <div class="card">
           <div class="card-header row m-0">
             <h5 class="mb-0 pt-1 col-10 pl-0 align-self-center">{{rowInfo.name}}</h5>
@@ -178,9 +176,13 @@
             </div>
           </div>
           <div class="card-header bg-hi-light-grey d-flex">
-            <button class="btn btn-sm btn-light" (click)="actDeactTag()">
-              {{rowInfo.isActive?'Deactivate':'Activate'}}
-            </button>
+            <div class="btn btn-sm btn-outline-{{rowInfo.isActive ? 'primary' : 'success'}}" (click)=" actDeactTag()">
+              {{rowInfo.isActive ? 'Deactivate' : 'Activate'}}
+              <i class="fas" [ngClass]="{'fa-toggle-off': rowInfo.isActive, 'fa-toggle-on': !rowInfo.isActive}"></i>
+            </div>
+            <div class="btn btn-sm btn-light ml-auto" (click)="updTagModal(editTag)">
+              <i class="fas fa-edit"></i>
+            </div>
           </div>
           <div class="card-body">
             <div class="doc-details details border-bottom mb-3 pb-3">
@@ -281,26 +283,25 @@
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-  <form name="updTagForm" (ngSubmit)="updTag()" [formGroup]="updTagForm" novalidate>
+  <form name="tagForm" (ngSubmit)="updTag()" [formGroup]="tagForm" novalidate>
     <div class="modal-body" ngbAutofocus>
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Name</mat-label>
         <input matInput type="text" placeholder="Name" formControlName="name" required>
-        <mat-error *ngIf="updTagForm.get('name')!.hasError('required')">
+        <mat-error *ngIf="tagForm.get('name')!.hasError('required')">
           Name is required
         </mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Organized in Categories</mat-label>
         <mat-select multiple [(value)]="rowInfo.categoryIDs">
-          <!-- multiple -->
           <mat-option hidden></mat-option>
           <mat-option *ngFor="let catg of catgs" value="{{catg.id}}">{{catg.name}}</mat-option>
         </mat-select>
       </mat-form-field>
     </div>
     <div class="modal-footer">
-      <button type="submit" class="btn btn-primary" [disabled]="updTagForm!.invalid || updDisabled">
+      <button type="submit" class="btn btn-primary" [disabled]="tagForm!.invalid || updDisabled">
         <app-loader [type]="'btn'" *ngIf="updDisabled"></app-loader>
         Update
       </button>
