--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -1,4 +1,4 @@
-<div class="card-footer row justify-content-between mx-0">
+<div class="card-footer row justify-content-between mx-0" *ngIf="totalCount">
   <div class="pages">
     <mat-form-field appearance="outline" class="mr-2">
       <mat-select [(ngModel)]="pageSize" (selectionChange)="chngPageSize()">
@@ -7,7 +7,6 @@
     </mat-form-field>
     <span>{{text}}</span>
   </div>
-  <ngb-pagination [collectionSize]="totalCount" [(page)]="page" [maxSize]="3" [pageSize]="pageSize" [rotate]="true"
-    [boundaryLinks]="true" (pageChange)="chngPageNo()">
+  <ngb-pagination [collectionSize]="totalCount" [(page)]="page" [maxSize]="3" [pageSize]="pageSize" [rotate]="true" [boundaryLinks]="true" (pageChange)="chngPageNo()">
   </ngb-pagination>
 </div>
