--- a/src/app/web-app/resource/exp/exp-inner/exp-inner.component.html
+++ b/src/app/web-app/resource/exp/exp-inner/exp-inner.component.html
@@ -8,34 +8,48 @@
     </span>
   </ol>
 </nav>
+
 <!-- grid view -->
 <div class="row mx-0 expid-grid" *ngIf="view">
-  <div class="col-md-3 text-center folder curs-ptr">
-    <div class="icon"><img src="assets/images/brands.png" style="max-width:100%; max-height: 200px;"></div>
-  </div>
-  <div class="col-md-3 text-center file curs-ptr">
-    <div class="icon"><img src="assets/images/discription.png" style="max-width:100%; max-height: 200px;"></div>
-    <div class="info bg-hi-dark-grey rounded d-flex mt-2 py-1 w-75 mx-auto">
-      <i class="fa fa-file ml-3 align-self-center"></i>
-      <div class="mx-auto">Borkey</div>
-    </div>
-    <div class="options rounded">
-      <div class="dropleft">
-        <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
-          <i class="fas fa-share-square"></i>
-        </button>
-        <div class="dropdown-menu" aria-labelledby="shareDD">
-          <a class="dropdown-item curs-ptr" (click)="openModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
-          <a class="dropdown-item curs-ptr" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
+  <ng-container *ngFor="let wSC of wrkspcCntnts">
+    <ng-container [ngSwitch]="wSC.key">
+      <div class="col-md-3 text-center folder curs-ptr" *ngSwitchCase="'fldr'">
+        <ng-container *ngTemplateOutlet="cntntFldr"></ng-container>
+      </div>
+      <div class="col-md-3 text-center folder curs-ptr" *ngSwitchCase="'smtFldr'">
+        <ng-container *ngTemplateOutlet="cntntFldr"></ng-container>
+      </div>
+      <div class="col-md-3 text-center file curs-ptr" *ngSwitchDefault>
+        <div class="icon"><img [src]="wSC.folderIconPath?wSC.folderIconPath:defImg" style="max-width:100%; max-height: 200px;"></div>
+        <div class="info bg-hi-dark-grey rounded d-flex mt-2 py-1 w-75 mx-auto">
+          <i class="fa fa-file ml-3 align-self-center"></i>
+          <div class="mx-auto">{{wSC.name}}</div>
+        </div>
+        <div class="options rounded">
+          <div class="dropleft">
+            <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="fas fa-share-square"></i>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="shareDD">
+              <a class="dropdown-item curs-ptr" (click)="openModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
+              <a class="dropdown-item curs-ptr" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
+            </div>
+          </div>
+          <div class="btn my-1" (click)="openModal(addtoCollection)">
+            <i class="fas fa-folder-plus"></i>
+          </div>
         </div>
       </div>
-      <div class="btn my-1" (click)="openModal(addtoCollection)">
-        <i class="fas fa-folder-plus"></i>
-      </div>
-    </div>
-  </div>
+      <ng-template #cntntFldr>
+        <div class="icon"><img [src]="wSC.folderIconPath?wSC.folderIconPath:defImg" style="max-width:100%; max-height: 200px;"></div>
+        <div class="info bg-hi-dark-grey rounded d-flex mt-2 py-1 w-75 mx-auto">
+          <div class="mx-auto">{{wSC.name}}</div>
+        </div>
+      </ng-template>
+    </ng-container>
+  </ng-container>
 </div>
+
 <!-- list view -->
 <div class="row mx-0 expid-list" *ngIf="!view">
   <div class="col-md-3">
@@ -110,8 +124,7 @@
       </div>
       <div class="options d-flex align-self-center ml-auto mr-3">
         <div class="dropleft mr-2">
-          <button class="btn btn-light" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">
+          <button class="btn btn-light" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-share-square"></i>
           </button>
           <div class="dropdown-menu" aria-labelledby="shareDD">
@@ -127,8 +140,7 @@
     <hr>
     <ul class="pagination justify-content-end mr-3">
       <li class="page-item disabled">
-        <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
-            class="fas fa-chevron-left"></i></a>
+        <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
       </li>
       <li class="page-item active"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a>
       </li>
@@ -308,3 +320,7 @@
     <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
   </div>
 </ng-template>
+
+
+
+<!-- font-weight-normal': !col.isSelected IN TAGS TR-->
